[package]
name = "pdao-near-light-client"
version = "0.0.1"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = '2021'
include = ["src/**/*", "Cargo.toml"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/postech-dao/near"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
near-sdk = "4.0.0"
pdao-colony-contract-common = { version = "0.1.0" }
pdao-beacon-chain-common = { version = "0.0.0" }

[lib]
crate-type = ["cdylib", "rlib"]
