[package]
name = "pdao-near-simple-counter"
version = "0.0.1"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = '2021'
include = ["src/**/*", "Cargo.toml"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/postech-dao/near"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
near-sdk = "4.0.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true