[package]
name = "pdao-near-simple-counter"
version = "0.0.1"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = '2021'
include = ["src/**/*", "Cargo.toml"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/postech-dao/near"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
near-sdk = "4.0.0"

[dev-dependencies]
anyhow = "1.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
workspaces = "0.4.0"
pkg-config = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
near-sdk = "4.0.0"

[lib]
crate-type = ["cdylib", "rlib"]
